Fix login error not showing

--- a/static/style.css
+++ b/static/style.css
@@ -287,7 +287,7 @@ button>img {
 }
 
 .error-label {
-    visibility: hidden;
+    display: none;
     color:red;
     font-size: 1.5em;
     text-align: center;
